Add a message key for header help btn

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -194,8 +194,9 @@
                     data-bs-toggle="tooltip"
                     data-bs-placement="left">
                     <ui:include src="/uii/includes/icon-info.xhtml" />
-                    Hilfe
+                    #{msgs.plugin_rest_usercreation_header_help}
                 </a>
+
             </div>
 
         </header>
