move all mail texts to config file

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -1031,7 +1031,18 @@
             </div>
         </ui:fragment>
 
+
         <ui:fragment rendered="#{externalLoginBean.wizzardMode!='page1' and externalLoginBean.wizzardMode!='confirm' and externalLoginBean.wizzardMode!='wait'}">
+                <!-- cancel button -->
+                <button
+                    jsf:id="cancel"
+                    class="btn btn-blank me-4"
+                    jsf:immediate="true">
+                    <f:setPropertyActionListener
+                        value=""
+                        target="#{externalLoginBean.uiStatus}" />
+                    <h:outputText value="#{msgs.abbrechen}" />
+                </button>
             <div class="submit form-actions form-actions--progress">
                 <button
                     jsf:rendered="#{externalLoginBean.wizzardMode!='page2'}"
