--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -459,7 +459,11 @@
                             <f:ajax
                                 render="@this"
                                 execute="@this" />
-                            <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                            <f:selectItems
+                                value="#{field.selectItemList}"
+                                itemLabel="#{msgs[val]}"
+                                itemValue="#{val}"
+                                var="val" />
                         </h:selectOneMenu>
                         <h:selectBooleanCheckbox
                             rendered="#{field.fieldType=='checkbox' or field.fieldType=='combo'}"
@@ -480,7 +484,11 @@
                             <f:ajax
                                 render="@form"
                                 execute="@this" />
-                            <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                            <f:selectItems
+                                value="#{field.selectItemList}"
+                                itemLabel="#{msgs[val]}"
+                                itemValue="#{val}"
+                                var="val" />
                         </h:selectOneRadio>
 
                         <!-- ICONS -->
@@ -585,7 +593,11 @@
                             <f:ajax
                                 render="@this"
                                 execute="@this" />
-                            <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                            <f:selectItems
+                                value="#{field.selectItemList}"
+                                itemLabel="#{msgs[val]}"
+                                itemValue="#{val}"
+                                var="val" />
                         </h:selectOneMenu>
                         <h:selectBooleanCheckbox
                             rendered="#{field.fieldType=='checkbox' or field.fieldType=='combo'}"
@@ -605,7 +617,11 @@
                             <f:ajax
                                 render="@form"
                                 execute="@this" />
-                            <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                            <f:selectItems
+                                value="#{field.selectItemList}"
+                                itemLabel="#{msgs[val]}"
+                                itemValue="#{val}"
+                                var="val" />
                         </h:selectOneRadio>
 
                         <!-- ICONS -->
@@ -713,7 +729,11 @@
                             <f:ajax
                                 render="@this"
                                 execute="@this" />
-                            <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                            <f:selectItems
+                                value="#{field.selectItemList}"
+                                itemLabel="#{msgs[val]}"
+                                itemValue="#{val}"
+                                var="val" />
                         </h:selectOneMenu>
                         <h:selectBooleanCheckbox
                             rendered="#{field.fieldType=='checkbox' or field.fieldType=='combo'}"
@@ -733,7 +753,11 @@
                             <f:ajax
                                 render="@form"
                                 execute="@this" />
-                            <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                            <f:selectItems
+                                value="#{field.selectItemList}"
+                                itemLabel="#{msgs[val]}"
+                                itemValue="#{val}"
+                                var="val" />
                         </h:selectOneRadio>
 
                         <!-- ICONS -->
@@ -853,17 +877,24 @@
                                 <f:ajax
                                     render="@this"
                                     execute="@this" />
-                                <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                                <f:selectItems
+                                    value="#{field.selectItemList}"
+                                    itemLabel="#{msgs[val]}"
+                                    itemValue="#{val}"
+                                    var="val" />
                             </h:selectOneMenu>
                             <h:selectOneRadio
                                 rendered="#{field.fieldType=='combo' and field.booleanValue}"
                                 styleClass="form-control"
-                                value="#{field.subValue}"
-                            >
+                                value="#{field.subValue}">
                                 <f:ajax
                                     render="@form"
                                     execute="@this" />
-                                <f:selectItems value="#{field.selectItemList}" itemLabel="#{msgs[val]}" itemValue="#{val}" var="val" />
+                                <f:selectItems
+                                    value="#{field.selectItemList}"
+                                    itemLabel="#{msgs[val]}"
+                                    itemValue="#{val}"
+                                    var="val" />
                             </h:selectOneRadio>
                             <h:panelGroup
                                 layout="block"
@@ -892,6 +923,15 @@
                 <!-- show all fields in read only mode -->
                 <h3>
                     <h:outputText value="#{msgs.plugin_rest_usercreation_new_institution}" />
+                    <button
+                        class="btn bnt-link"
+                        style="float: right"
+                        jsf:immediate="true">
+                        <f:setPropertyActionListener
+                            value="page2"
+                            target="#{externalLoginBean.wizzardMode}" />
+                        <h:outputText value="#{msgs.bearbeiten}" />
+                    </button>
                 </h3>
                 <zlb:formOutputTxt
                     label="#{msgs.plugin_rest_usercreation_new_account_institutionName}"
@@ -911,6 +951,15 @@
             <section class="common-region one-col overview">
                 <h3 class="heading__contact">
                     <h:outputText value="#{msgs.plugin_rest_usercreation_new_contact}" />
+                    <button
+                        class="btn bnt-link"
+                        style="float: right"
+                        jsf:immediate="true">
+                        <f:setPropertyActionListener
+                            value="page3"
+                            target="#{externalLoginBean.wizzardMode}" />
+                        <h:outputText value="#{msgs.bearbeiten}" />
+                    </button>
                 </h3>
                 <ui:repeat
                     var="field"
@@ -925,6 +974,15 @@
 
                     <h3 class="heading__contact">
                         <h:outputText value="#{msgs.plugin_rest_usercreation_new_contact}" />
+                        <button
+                            class="btn bnt-link"
+                            style="float: right"
+                            jsf:immediate="true">
+                            <f:setPropertyActionListener
+                                value="page3"
+                                target="#{externalLoginBean.wizzardMode}" />
+                            <h:outputText value="#{msgs.bearbeiten}" />
+                        </button>
                     </h3>
 
                     <ui:repeat
@@ -943,6 +1001,15 @@
 
                 <h3>
                     <h:outputText value="#{msgs.plugin_rest_usercreation_new_additionalData}" />
+                    <button
+                        class="btn bnt-link"
+                        style="float: right"
+                        jsf:immediate="true">
+                        <f:setPropertyActionListener
+                            value="page4"
+                            target="#{externalLoginBean.wizzardMode}" />
+                        <h:outputText value="#{msgs.bearbeiten}" />
+                    </button>
                 </h3>
                 <ui:repeat
                     var="field"
@@ -956,7 +1023,7 @@
                         classRight="col-sm-12 col-md-2"
                         showDisabledCheckBox="#{true}"
                         showDisabledCheckBoxActivated="#{field.value}"
-                        secondValue="#{field.subValue}"/>
+                        secondValue="#{field.subValue}" />
                 </ui:repeat>
 
             </section>
@@ -1032,7 +1099,10 @@
         </ui:fragment>
 
 
+
+
         <ui:fragment rendered="#{externalLoginBean.wizzardMode!='page1' and externalLoginBean.wizzardMode!='confirm' and externalLoginBean.wizzardMode!='wait'}">
+            <div class="submit form-actions form-actions--progress">
                 <!-- cancel button -->
                 <button
                     jsf:id="cancel"
@@ -1043,7 +1113,6 @@
                         target="#{externalLoginBean.uiStatus}" />
                     <h:outputText value="#{msgs.abbrechen}" />
                 </button>
-            <div class="submit form-actions form-actions--progress">
                 <button
                     jsf:rendered="#{externalLoginBean.wizzardMode!='page2'}"
                     jsf:action="#{externalLoginBean.back}"
@@ -1061,17 +1130,42 @@
                     </li>
                     <li class="#{externalLoginBean.wizzardMode=='page2' ? 'active': 'finished'}">
                         <h:panelGroup styleClass="status #{externalLoginBean.wizzardMode=='page2' ? 'active': 'finished'}">
-                            <h:outputText value="#{msgs.plugin_rest_usercreation_page2}" />
+                            <button
+                                class="btn bnt-link"
+                                jsf:immediate="true"
+                                jsf:disabled="#{externalLoginBean.wizzardMode=='page2'}">
+                                <f:setPropertyActionListener
+                                    value="page2"
+                                    target="#{externalLoginBean.wizzardMode}" />
+                                <h:outputText value="#{msgs.plugin_rest_usercreation_page2}" />
+                            </button>
                         </h:panelGroup>
                     </li>
                     <li class="#{externalLoginBean.wizzardMode=='page3' ? 'active': externalLoginBean.wizzardMode=='page1' or externalLoginBean.wizzardMode=='page2' ? 'inactive': 'finished'}">
                         <h:panelGroup styleClass="status #{externalLoginBean.wizzardMode=='data2' ? 'active': externalLoginBean.wizzardMode=='page1' or externalLoginBean.wizzardMode=='page2' ? 'inactive': 'finished'}">
-                            <h:outputText value="#{msgs.plugin_rest_usercreation_page3}" />
+
+                            <button
+                                class="btn bnt-link"
+                                jsf:immediate="true"
+                                jsf:disabled="#{externalLoginBean.wizzardMode=='page2' or externalLoginBean.wizzardMode=='page3'}">
+                                <f:setPropertyActionListener
+                                    value="page3"
+                                    target="#{externalLoginBean.wizzardMode}" />
+                                <h:outputText value="#{msgs.plugin_rest_usercreation_page3}" />
+                            </button>
                         </h:panelGroup>
                     </li>
                     <li class="#{externalLoginBean.wizzardMode=='page4' ? 'active': externalLoginBean.wizzardMode=='page1' or externalLoginBean.wizzardMode=='page2' or externalLoginBean.wizzardMode=='page3' ? 'inactive': 'finished'}">
                         <h:panelGroup styleClass="status #{externalLoginBean.wizzardMode=='page4' ? 'active': externalLoginBean.wizzardMode=='page1' or externalLoginBean.wizzardMode=='page2' or externalLoginBean.wizzardMode=='page3' ? 'inactive': 'finished'}">
-                            <h:outputText value="#{msgs.plugin_rest_usercreation_page4}" />
+                            <button
+                                class="btn bnt-link"
+                                jsf:immediate="true"
+                                jsf:disabled="#{externalLoginBean.wizzardMode=='page2' or externalLoginBean.wizzardMode=='page3' or externalLoginBean.wizzardMode=='page4'}">
+                                <f:setPropertyActionListener
+                                    value="page4"
+                                    target="#{externalLoginBean.wizzardMode}" />
+                                <h:outputText value="#{msgs.plugin_rest_usercreation_page4}" />
+                            </button>
                         </h:panelGroup>
                     </li>
 
@@ -1099,10 +1193,10 @@
             </div>
         </ui:fragment>
 
-    	  <ui:include src="../includes/helpModals.xhtml" />
+        <ui:include src="../includes/helpModals.xhtml" />
 
 
-<script>
+        <script>
 function focusField (elem) {
 // do nothing
 }
